--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>楊子賢的履歷</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -65,9 +66,15 @@
                     <h2 class="title">聯絡資訊
                         <span class="en-title">Contact info</span>
                     </h2>
-                    <li class="text">0975******</li>
-                    <li class="text">台中市南區</li>
-                    <li class="text">zsyang621@gmail.com</li>
+                    <li class="text">
+                        <i class="bi bi-phone-fill"></i>
+                        0975******</li>
+                        <li class="text">
+                            <i class="bi bi-geo-alt-fill"></i>
+                            台中市南區</li>
+                    <li class="text">
+                        <i class="bi bi-envelope-fill"></i>
+                        zsyang621@gmail.com</li>
                 </div>
             </div>
             <div class="section-right">
