--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
             
         </header>
         <main>
+            <div class="decoration">
+                <div class="bean"></div>
+                <div class="bean"></div>
+                <div class="bean"></div>
+            </div>
             <div class="section-left">
                 <div class="card">
                     <h2 class="title">學歷
